Wed Feb  9 23:48:56 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportConfiguration.cpp:
        * dds/DCPS/transport/framework/TransportImpl.cpp:

          Fixed further WCHAR problems.

Wed Feb  9 22:24:04 UTC 2011  Don Hudson  <hudsond@ociweb.com>

        * dds/DCPS/transport/framework/TransportConfiguration.cpp:
        * dds/DCPS/transport/multicast/MulticastConfiguration.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpConfiguration.cpp:
        * dds/DCPS/transport/udp/UdpConfiguration.cpp:
        * performance-tests/DCPS/dummyTCP/DummyTcpConfiguration.cpp:

          Wrapped name parameter in ACE_TEXT when calling formatNameForDump().

        * dds/DCPS/transport/framework/TransportImpl.cpp:

          Removed part of debug message that shouldn't have been committed.

Wed Feb  9 14:53:48 UTC 2011  Don Hudson  <hudsond@ociweb.com>

        * dds/DCPS/transport/framework/TransportConfiguration.h:
        * dds/DCPS/transport/framework/TransportConfiguration.cpp:

          Changed formatNameForDump() method to take a ACE_TString.

Tue Feb  8 16:36:38 UTC 2011  Don Hudson  <hudsond@ociweb.com>

        * dds/DCPS/transport/framework/TransportConfiguration.h:
        * dds/DCPS/transport/framework/TransportConfiguration.cpp:
        * dds/DCPS/transport/framework/TransportImpl.h:
        * dds/DCPS/transport/framework/TransportImpl.cpp:
        * dds/DCPS/transport/multicast/MulticastConfiguration.h:
        * dds/DCPS/transport/multicast/MulticastConfiguration.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpConfiguration.h:
        * dds/DCPS/transport/simpleTCP/SimpleTcpConfiguration.cpp:
        * dds/DCPS/transport/udp/UdpConfiguration.h:
        * dds/DCPS/transport/udp/UdpConfiguration.cpp:
        * performance-tests/DCPS/dummyTCP/DummyTcpConfiguration.h:
        * performance-tests/DCPS/dummyTCP/DummyTcpConfiguration.cpp:
