@@ -62,7 +62,7 @@ void
 UdpConfiguration::dump(std::ostream& os)
 {
   TransportConfiguration::dump(os);
- 
+
   os << formatNameForDump(ACE_TEXT("local_address")) << this->local_address_.get_host_addr()
                                                      << ":" << this->local_address_.get_port_number() << std::endl;
 }
